# oppia-android

./: WORKSPACE
.github/workflows/: static_checks.yml
app/: BUILD.bazel
app/src/main/: AndroidManifest.xml
app/src/main/java/org/oppia/android/app/administratorcontrols/: AdministratorControlsActivityPresenter.kt
app/src/main/java/org/oppia/android/app/classroom/: ClassroomListFragmentPresenter.kt  ClassroomListViewModel.kt  ThumbnailImage.kt
app/src/main/java/org/oppia/android/app/customview/: LessonThumbnailImageView.kt
app/src/main/java/org/oppia/android/app/hintsandsolution/: HintViewModel.kt  HintsAndSolutionViewModel.kt
app/src/main/java/org/oppia/android/app/options/: AudioLanguageItemViewModel.kt  AudioLanguageSelectionViewModel.kt
app/src/main/java/org/oppia/android/app/policies/: PoliciesFragment.kt  PoliciesFragmentPresenter.kt
app/src/main/java/org/oppia/android/app/profile/: PinPasswordActivity.kt  PinPasswordActivityPresenter.kt
app/src/main/java/org/oppia/android/app/shim/: IntentFactoryShim.kt
app/src/main/java/org/oppia/android/app/story/: StoryFragmentScroller.kt
app/src/main/java/org/oppia/android/app/utility/: FontScaleConfigurationUtil.kt
app/src/main/res/layout/: audio_language_item.xml  bottom_sheet_options_menu_fragment.xml  circular_progress_indicator_adapters_test_activity.xml  content_item.xml  drawer_fragment.xml  feedback_item.xml  numeric_input_interaction_item.xml  policies_fragment.xml  profile_chooser_fragment.xml  profile_list_control_buttons.xml  profile_progress_recently_played_story_card.xml  promoted_story_card.xml  recently_played_story_card.xml  topic_lessons_story_summary.xml  walkthrough_final_fragment.xml
app/src/main/res/layout-land/: profile_chooser_fragment.xml  resume_lesson_fragment.xml  walkthrough_final_fragment.xml
app/src/main/res/layout-sw600dp/: profile_chooser_fragment.xml
app/src/main/res/layout-sw600dp-land/: resume_lesson_fragment.xml  topic_lessons_story_summary.xml
app/src/main/res/values/: strings.xml  styles.xml
domain/src/main/assets/: test_exp_id_2.json  test_exp_id_2.textproto
scripts/: BUILD.bazel  static_checks.sh
scripts/assets/: file_content_validation_checks.textproto  test_file_exemptions.textproto  todo_open_exemptions.textproto
scripts/src/java/org/oppia/android/scripts/xml/: BUILD.bazel  TextViewStyleCheck.kt
scripts/src/javatests/org/oppia/android/scripts/regex/: RegexPatternValidationCheckTest.kt
scripts/src/javatests/org/oppia/android/scripts/xml/: BUILD.bazel  TextViewStyleCheckTest.kt
testing/src/test/java/org/oppia/android/testing/math/: BUILD.bazel  ComparableOperationSubjectTest.kt  FractionSubjectTest.kt  MathEquationSubjectTest.kt  MathExpressionSubjectTest.kt  MathParsingErrorSubjectTest.kt  PolynomialSubjectTest.kt  RealSubjectTest.kt  TokenSubjectTest.kt
(+50 files in other folders)
