"""
Tests for math-related test utilities.
"""

load("//:oppia_android_test.bzl", "oppia_android_test")

oppia_android_test(
    name = "FractionSubjectTest",
    srcs = ["FractionSubjectTest.kt"],
    custom_package = "org.oppia.android.testing.math",
    test_class = "org.oppia.android.testing.math.FractionSubjectTest",
    test_manifest = "//testing:test_manifest",
    deps = [
        "//model/src/main/proto:math_java_proto_lite",
        "//testing/src/main/java/org/oppia/android/testing/math:fraction_subject",
        "//testing/src/main/java/org/oppia/android/testing/robolectric:test_module",
        "//third_party:com_google_truth_truth",
        "//third_party:junit_junit",
        "//third_party:robolectric_android-all",
    ],
)

oppia_android_test(
    name = "MathEquationSubjectTest",
    srcs = ["MathEquationSubjectTest.kt"],
    custom_package = "org.oppia.android.testing.math",
    test_class = "org.oppia.android.testing.math.MathEquationSubjectTest",
    test_manifest = "//testing:test_manifest",
    deps = [
        "//model/src/main/proto:math_java_proto_lite",
        "//testing/src/main/java/org/oppia/android/testing/math:math_equation_subject",
        "//testing/src/main/java/org/oppia/android/testing/robolectric:test_module",
        "//third_party:com_google_truth_truth",
        "//third_party:junit_junit",
        "//third_party:robolectric_android-all",
    ],
)

oppia_android_test(
    name = "MathExpressionSubjectTest",
    srcs = ["MathExpressionSubjectTest.kt"],
    custom_package = "org.oppia.android.testing.math",
    test_class = "org.oppia.android.testing.math.MathExpressionSubjectTest",
    test_manifest = "//testing:test_manifest",
    deps = [
        "//model/src/main/proto:math_java_proto_lite",
        "//testing/src/main/java/org/oppia/android/testing/math:math_expression_subject",
        "//testing/src/main/java/org/oppia/android/testing/robolectric:test_module",
        "//third_party:com_google_truth_truth",
        "//third_party:junit_junit",
        "//third_party:robolectric_android-all",
    ],
)

oppia_android_test(
    name = "RealSubjectTest",
    srcs = ["RealSubjectTest.kt"],
    custom_package = "org.oppia.android.testing.math",
    test_class = "org.oppia.android.testing.math.RealSubjectTest",
    test_manifest = "//testing:test_manifest",
    deps = [
        "//model/src/main/proto:math_java_proto_lite",
        "//testing/src/main/java/org/oppia/android/testing/math:real_subject",
        "//testing/src/main/java/org/oppia/android/testing/robolectric:test_module",
        "//third_party:com_google_truth_truth",
        "//third_party:junit_junit",
        "//third_party:robolectric_android-all",
    ],
)
